src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>B2B Sales Process</fullName>
        <description>Process for logging sales data for B2B opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>RB Robotics Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Approval</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Retail Sales</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Approval</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Initial</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Retail Sales 2</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Approval</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Initial</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Active_Customer_project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Customer project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Length_months__c</fullName>
        <label>Contract Length months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cylinder_Volume__c</fullName>
        <formula>3.14159  * ( radius__c * radius__c )*  height__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cylinder Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_to_Close__c</fullName>
        <formula>CloseDate - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Percent_Status__c</fullName>
        <label>Discount Percent Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>NoT Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <description>Displays the percentage to be subtracted from the total amount of the opportunity.</description>
        <inlineHelpText>If the customer is getting a discount on this opportunity, enter the amount here. For example, if the discount is 10%, enter the whole number 10.</inlineHelpText>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discounted_Amount__c</fullName>
        <description>Calculates the opportunity amount after any discount has been applied.</description>
        <formula>Amount * (1 - Discount_Percentage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity amount after discount has been applied.</inlineHelpText>
        <label>Discounted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Enquiry_date__c</fullName>
        <label>Lead Enquiry date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_time_activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One time activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Progress__c</fullName>
        <formula>IF( Percent_Completed__c &lt;=25,&quot;Early&quot;, 
IF(Percent_Completed__c &lt;=75,&quot;Middle&quot;, 
&quot;Late&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Completed__c</fullName>
        <formula>(DATEVALUE( CreatedDate ) - CloseDate )/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <label>Track</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X120_After_RCD__c</fullName>
        <formula>CloseDate  + 120</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>120 After RCD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>deal_status__c</fullName>
        <label>deal status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass with follow up</fullName>
                </value>
                <value>
                    <fullName>Pass without follow up</fullName>
                </value>
                <value>
                    <fullName>Evaluating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>height__c</fullName>
        <label>height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>radius__c</fullName>
        <label>radius</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>High_Probability_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Proposal/Price Quote,Negotiation/Review</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>greaterOrEqual</operation>
            <value>50</value>
        </filters>
        <label>High Probability Opportunities</label>
    </listViews>
    <listViews>
        <fullName>High_Probability_Opportunities1</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Proposal/Price Quote</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Negotiation/Review</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>greaterOrEqual</operation>
            <value>50</value>
        </filters>
        <label>High Probability Opportunities</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.EXP_AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.AMOUNT</field>
            <operation>greaterThan</operation>
            <value>50000</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>greaterOrEqual</operation>
            <value>20</value>
        </filters>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Hide</fullName>
        <active>true</active>
        <businessProcess>B2B Sales Process</businessProcess>
        <label>Hide</label>
    </recordTypes>
    <recordTypes>
        <fullName>RB_Robotics_Process_RT</fullName>
        <active>true</active>
        <businessProcess>RB Robotics Sales Process</businessProcess>
        <label>RB Robotics Process RT</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>